Refactor parameters for getMyQuestions and refactor messages in Question (Rafaela) lauraye27/miw-frontend-foro#23